--- a/index.htm
+++ b/index.htm
@@ -3,14 +3,14 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
+    <script type="text/javascript" src="settings.js"></script>
 </head>
 
 <body>
     <!--header-->
-    <div class="header">
+    <header>
             <!--complete header here-->     
-    </div>
+    </header>
 
     <div class="menu">
         <li><a herf="#" onclick="toggle('Welcome')">Welcome</a></li>
@@ -20,13 +20,10 @@
         <li><a herf="#" onclick="toggle('About')">About</a></li>
     </div>  
 
-    <div class="content" id="Welcome" style="display:block;">
-        <br>
-        <br>
+    <div class="content" id="Welcome" style="display:none;">
         <button id="welcomeButtonRegister" type="button" onclick="toggle('Register')">Register </button>
         <button id="welcomeButtonLogin" type="button" onclick="toggle('Login')">Log-In!</button>
-        <br>
-        <br>
+        
     </div>
     <div class="content" id="Register" style="display:none;">
         hi2
@@ -34,13 +31,25 @@
     <div class="content" id="Login" style="display:none;">
         hi3
     </div>
-    <div class="content" id="Settings" style="display:none;">
-        hi4
+    <div class="content" id="Settings" style="display:block;">
+        <container class="settingForm">
+            <div class="whitetop">
+                <h3> Settings </h3>
+            </div>
+            <table>
+                
+            </table>
+            <input type="number" name="numBalls" min="50" max="90">
+
+
+        </container>
     </div>
     <div class="content" id="About" style="display:none;">
         hi5
     </div>
     <div class="content" id="Game" style="display:none;">
+        <br>
+        <br>
         SCORE:
         <input id="lblScore" type="text"/>
         <br/>
@@ -50,9 +59,9 @@
         <canvas id="canvas" height="600" width="600"></canvas>    
     </div>
 
-    <div class="footer">
+    <footer>
             <!--complete footer here-->     
-    </div>
+    </footer>
 
 <script type="text/javascript">
     var context = canvas.getContext("2d");
@@ -63,6 +72,7 @@
     var start_time;
     var time_elapsed;
     var interval;
+    var pacDirection;
 
     Start();
 
@@ -70,6 +80,7 @@
         board = new Array();
         score = 0;
         pac_color = "yellow";
+        pacDirection =1;
         var cnt = 100;
         var food_remain = 50;
         var pacman_remain = 1;
@@ -109,7 +120,7 @@
         addEventListener("keyup", function (e) {
             keysDown[e.code] = false;
         }, false);
-        interval = setInterval(UpdatePosition, 250);
+        interval = setInterval(UpdatePosition, 120);
     }
 
 
@@ -152,14 +163,24 @@
                 center.y = j * 60 + 30;
                 if (board[i][j] === 2) {
                     context.beginPath();
-                    context.arc(center.x, center.y, 30, 0.15 * Math.PI, 1.85 * Math.PI); // half circle
+                    /* draw packman according to it's direction */
+                    context.arc(center.x, center.y, 30, ((1.65+0.5*pacDirection) % 2) * Math.PI, ((1.35+0.5*pacDirection)%2)* Math.PI);
                     context.lineTo(center.x, center.y);
                     context.fillStyle = pac_color; //color
                     context.fill();
                     context.beginPath();
-                    context.arc(center.x + 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
+                    /* change eye drawing based on pacman direction */
+                    if(pacDirection==0)
+                        context.arc(center.x + 15, center.y - 5, 5, 0, 2 * Math.PI); // circle
+                    else if(pacDirection==1)
+                        context.arc(center.x + 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
+                    else if (pacDirection==2)
+                        context.arc(center.x - 15, center.y + 5, 5, 0, 2 * Math.PI); // circle
+                    else if (pacDirection==3)
+                        context.arc(center.x - 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
                     context.fillStyle = "black"; //color
                     context.fill();
+                    // drawPackman();
                 } else if (board[i][j] === 1) {
                     context.beginPath();
                     context.arc(center.x, center.y, 15, 0, 2 * Math.PI); // circle
@@ -173,31 +194,33 @@
                 }
             }
         }
-
-
     }
 
     function UpdatePosition() {
         board[shape.i][shape.j] = 0;
         var x = GetKeyPressed();
-        if (x === 1) {
+        if (x === 1) { //ArrowUp
             if (shape.j > 0 && board[shape.i][shape.j - 1] !== 4) {
                 shape.j--;
+                pacDirection=0;
             }
         }
-        if (x === 2) {
+        if (x === 2) { //ArrowDown
             if (shape.j < 9 && board[shape.i][shape.j + 1] !== 4) {
                 shape.j++;
+                pacDirection=2;
             }
         }
-        if (x === 3) {
+        if (x === 3) { //ArrowLeft
             if (shape.i > 0 && board[shape.i - 1][shape.j] !== 4) {
                 shape.i--;
+                pacDirection=3;
             }
         }
-        if (x === 4) {
+        if (x === 4) { //ArrowRight
             if (shape.i < 9 && board[shape.i + 1][shape.j] !== 4) {
                 shape.i++;
+                pacDirection=1;
             }
         }
         if (board[shape.i][shape.j] === 1) {
