--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
+    <script type="text/javascript" src="login.js"></script>
     <script type="text/javascript" src="settings.js"></script>
+    <script type="text/javascript" src="register.js"></script>
 </head>
 
 <body>
@@ -20,28 +23,79 @@
         <li><a herf="#" onclick="toggle('About')">About</a></li>
     </div>  
 
-    <div class="content" id="Welcome" style="display:none;">
+    <div class="content" id="Welcome" style="display:block;">
+        <br>
+        <br>
         <button id="welcomeButtonRegister" type="button" onclick="toggle('Register')">Register </button>
         <button id="welcomeButtonLogin" type="button" onclick="toggle('Login')">Log-In!</button>
-        
+        <br>
+        <br>
     </div>
     <div class="content" id="Register" style="display:none;">
-        hi2
+        <form  method="post" class="registerform" id="register_form" onSubmit= "javascript:checkform()">
+            <div class=whitetop>
+                <h3> Register information</h3>
+            </div>
+            <input class="name" type="text" name="username" placeholder="Username" required >
+            <br>
+            <input class="mail" type="email" name="email" placeholder="E-mail address" required >
+            <br>
+            <input class="name" type="text" name="firstName" placeholder="First Name" required >
+            <br>
+            <input class="name" type="text" name="lastName" placeholder="Last Name" required >
+            <br>
+            <input class="pass" type="password" name="password" placeholder="Password" required>
+            <br>
+            <input class="date" type="Date" name="date" required>
+            <br>
+            <input class="submit" type="submit" name="submit" herf="#"  value="Register">
+        </form>
+
     </div>
     <div class="content" id="Login" style="display:none;">
-        hi3
+        <form action="login" method="post" class="loginform">
+            <div class=whitetop>
+                <h3> Login information</h3>
+            </div>
+
+            <input class="name" type="username" name="username" placeholder="username" required >
+            <br>
+            <input class="pass" type="password" name="password" placeholder="password" required>
+            <br>
+        </form>
+        <br>
+        <input class="submit" type="submit" herf="#" onclick="toggle('Settings')" value="Login">
     </div>
-    <div class="content" id="Settings" style="display:block;">
+    <div class="content" id="Settings" style="display:none;">
         <container class="settingForm">
             <div class="whitetop">
                 <h3> Settings </h3>
             </div>
             <table>
-                
+                <tr>
+                    <th> Number of balls: </th>
+                    <th><input type="number" name="numBalls" placeholder="Choose value between 50 and 90"></th>
+                </tr>
+                <tr>
+                    <th> Time for game:</th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <th>Number of monsters [1-3]:</th>
+                    <th>  </th>
+                </tr>
+                <tr>
+                    <th>5 points Color:</th>
+                    <th>  </th>
+                </tr>
+                <th>15 points Color:</th>
+                <th>  </th>
+                <tr>
+                </tr>
+                <th>25 points Color:</th>
+                <th>  </th>
+                <tr>
             </table>
-            <input type="number" name="numBalls" min="50" max="90">
-
-
         </container>
     </div>
     <div class="content" id="About" style="display:none;">
@@ -60,7 +114,7 @@
     </div>
 
     <footer>
-            <!--complete footer here-->     
+            <!--complete footer here-->
     </footer>
 
 <script type="text/javascript">
@@ -74,6 +128,11 @@
     var interval;
     var pacDirection;
 
+    function checkform(){
+        toggle('Login')
+        return false;
+
+    }
     Start();
 
     function Start() {
