--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 
 <head>
+    <script src="jquery.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
     <script type="text/javascript" src="login.js"></script>
-    <script type="text/javascript" src="settings.js"></script>
+    <script type="text/javascript" src="SettingsPage.js"></script>
     <script type="text/javascript" src="register.js"></script>
 </head>
 
@@ -23,7 +24,7 @@
         <li><a herf="#" onclick="toggle('About')">About</a></li>
     </div>  
 
-    <div class="content" id="Welcome" style="display:block;">
+    <div class="content" id="Welcome" style="display:none;">
         <br>
         <br>
         <button id="welcomeButtonRegister" type="button" onclick="toggle('Register')">Register </button>
@@ -48,7 +49,7 @@
             <br>
             <input class="date" type="Date" name="date" required>
             <br>
-            <input class="submit" type="submit" name="submit" herf="#"  value="Register">
+            <input class="submit" type="submit" name="submit" herf="#" value="Register">
         </form>
 
     </div>
@@ -57,7 +58,6 @@
             <div class=whitetop>
                 <h3> Login information</h3>
             </div>
-
             <input class="name" type="username" name="username" placeholder="username" required >
             <br>
             <input class="pass" type="password" name="password" placeholder="password" required>
@@ -66,36 +66,81 @@
         <br>
         <input class="submit" type="submit" herf="#" onclick="toggle('Settings')" value="Login">
     </div>
-    <div class="content" id="Settings" style="display:none;">
+    <div class="content" id="Settings" style="display:block;">
         <container class="settingForm">
             <div class="whitetop">
                 <h3> Settings </h3>
             </div>
-            <table>
+            <table style="display: inline-block" id="settingsTable">>
+                <br>
+                    <tr>
+                        <th> Number of balls: </th>
+                        <th>
+                            <div class="range-slider">
+                                <input class="range-slider__range" type="range" value="75" min="50" max="90" onchange="showRangeSliderValue(this.value)">
+                                <span class="range-slider__value">75</span>
+                            </div>
+                        </th>
+                    </tr>
+                <br>
                 <tr>
-                    <th> Number of balls: </th>
-                    <th><input type="number" name="numBalls" placeholder="Choose value between 50 and 90"></th>
+                    <th> Game duration:</th>
+                    <th><input type="text" name="gameTime" placeholder="Minimum 60"> Seconds</th>
                 </tr>
+                <br>
                 <tr>
-                    <th> Time for game:</th>
+                    <th>Number of monsters:</th>
+                    <th> <select name="numMonsters">
+                            <option selected>1</option>
+                            <option >2</option>
+                            <option >3</option>
+                    </select>
+                    </th>
+                </tr>
+                <br>
+                <tr>
+                    <th></th>
+                    <th> 5 points <input type="color" name="5ptColor" value="#948cea"> </th>
+                </tr>
+                <br>
+                <tr>
+                    <th> Game balls color :</th>
+                    <th> 15 points <input type="color" name="15ptColor" value="#eda3c1"> </th>
+                <tr>
+                    <th></th>
+                    <th> 25 points <input type="color" name="25ptColor" value="#8dddb8"> </th>
+                </tr>
+            </table>
+            <table id="keysTable" style="float:right">
+                <tr>
+                    <th></th>
+                    <th>
+                        <input class="keys" type="button" value="Up" width="1px" height="10px" onclick="catchUserChoise(this)">
+                        <span id="keyUp"></span>
+                    </th>
                     <th></th>
                 </tr>
                 <tr>
-                    <th>Number of monsters [1-3]:</th>
-                    <th>  </th>
+                    <th>
+                        <span id="keyLeft"></span>
+                        <input class="keys" value="Left" type="button" onclick="catchUserChoise(this)"></th>
+                    <th><img src="Images/4ArrowKeys.PNG" height="100" width="150"></th>
+                    <th>
+                        <input class="keys" value="Right" type="button" width="1px" height="10px" onclick="catchUserChoise(this)">
+                        <span id="keyRight"></span>
+                    </th>
                 </tr>
                 <tr>
-                    <th>5 points Color:</th>
-                    <th>  </th>
+                    <th></th>
+                    <th>
+                        <input class="keys" value="Down" type="button" width="1px" height="10px" onclick="catchUserChoise(this)">
+                        <span id="keyDown"></span>
+                    </th>
+                    <th></th>
                 </tr>
-                <th>15 points Color:</th>
-                <th>  </th>
-                <tr>
-                </tr>
-                <th>25 points Color:</th>
-                <th>  </th>
-                <tr>
             </table>
+            <input type="button" value="Random" onclick="randomizeAll()">
+            <input type="button" value="Let's play!" onclick="activateGame()">
         </container>
     </div>
     <div class="content" id="About" style="display:none;">
@@ -110,7 +155,7 @@
         TIME:
         <input id="lblTime" type="text"/>
         <br/> 
-        <canvas id="canvas" height="600" width="600"></canvas>    
+        <canvas id="canvas" height="600" width="600"></canvas>
     </div>
 
     <footer>
@@ -128,20 +173,17 @@
     var interval;
     var pacDirection;
 
-    function checkform(){
-        toggle('Login')
-        return false;
-
-    }
-    Start();
-
     function Start() {
         board = new Array();
         score = 0;
         pac_color = "yellow";
         pacDirection =1;
         var cnt = 100;
-        var food_remain = 50;
+        var food_remain = $('.range-slider input[type=range]').val();
+        var fivePointFood= Math.floor(0.6* food_remain);
+        var fifteenPointFood= Math.floor(0.3* food_remain);
+        var twentyFivePointFood= Math.ceil(0.1* food_remain);
+
         var pacman_remain = 1;
         start_time = new Date();
         for (var i = 0; i < 10; i++) {
@@ -154,7 +196,23 @@
                     var randomNum = Math.random();
                     if (randomNum <= 1.0 * food_remain / cnt) {
                         food_remain--;
-                        board[i][j] = 1;
+                        var foodColored=false,secondRand;
+                        while(!foodColored) {
+                            secondRand= Math.random();
+                            if (secondRand <= 0.1 && twentyFivePointFood > 0) {
+                                board[i][j] = 1;
+                                twentyFivePointFood--;
+                                foodColored=true;
+                            } else if (secondRand > 0.1 && secondRand <= 0.4 && fifteenPointFood > 0) {
+                                board[i][j] = 3;
+                                fifteenPointFood--;
+                                foodColored=true;
+                            } else if (secondRand > 0.4 && fivePointFood > 0) {
+                                board[i][j] = 5;
+                                fivePointFood--;
+                                foodColored=true;
+                            }
+                        }
                     } else if (randomNum < 1.0 * (pacman_remain + food_remain) / cnt) {
                         shape.i = i;
                         shape.j = j;
@@ -197,16 +255,16 @@
      * @return {number}
      */
     function GetKeyPressed() {
-        if (keysDown['ArrowUp']) {
+        if (keysDown[$('#keyUp').text()]) {
             return 1;
         }
-        if (keysDown['ArrowDown']) {
+        if (keysDown[$('#keyDown').text()]) {
             return 2;
         }
-        if (keysDown['ArrowLeft']) {
+        if (keysDown[$('#keyLeft').text()]) {
             return 3;
         }
-        if (keysDown['ArrowRight']) {
+        if (keysDown[$('#keyRight').text()]) {
             return 4;
         }
     }
@@ -223,31 +281,37 @@
                 if (board[i][j] === 2) {
                     context.beginPath();
                     /* draw packman according to it's direction */
-                    context.arc(center.x, center.y, 30, ((1.65+0.5*pacDirection) % 2) * Math.PI, ((1.35+0.5*pacDirection)%2)* Math.PI);
+                    context.arc(center.x, center.y, 20, ((1.65+0.5*pacDirection) % 2) * Math.PI, ((1.35+0.5*pacDirection)%2)* Math.PI);
                     context.lineTo(center.x, center.y);
                     context.fillStyle = pac_color; //color
                     context.fill();
                     context.beginPath();
                     /* change eye drawing based on pacman direction */
                     if(pacDirection==0)
-                        context.arc(center.x + 15, center.y - 5, 5, 0, 2 * Math.PI); // circle
+                        context.arc(center.x + 15, center.y - 5, 3, 0, 2 * Math.PI); // circle
                     else if(pacDirection==1)
-                        context.arc(center.x + 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
+                        context.arc(center.x + 5, center.y - 15, 3, 0, 2 * Math.PI); // circle
                     else if (pacDirection==2)
-                        context.arc(center.x - 15, center.y + 5, 5, 0, 2 * Math.PI); // circle
+                        context.arc(center.x - 15, center.y + 5, 3, 0, 2 * Math.PI); // circle
                     else if (pacDirection==3)
-                        context.arc(center.x - 5, center.y - 15, 5, 0, 2 * Math.PI); // circle
+                        context.arc(center.x - 5, center.y - 15, 3, 0, 2 * Math.PI); // circle
                     context.fillStyle = "black"; //color
                     context.fill();
                     // drawPackman();
-                } else if (board[i][j] === 1) {
+                } else if (board[i][j] === 1 || board[i][j] === 3 || board[i][j] ===5) {
                     context.beginPath();
-                    context.arc(center.x, center.y, 15, 0, 2 * Math.PI); // circle
-                    context.fillStyle = "black"; //color
+                    context.arc(center.x, center.y, 7, 0, 2 * Math.PI); // circle
+                    if(board[i][j]===1) {
+                        context.fillStyle = $('input[name=25ptColor]').val(); //color
+                    }
+                    else if (board[i][j] === 3)
+                        context.fillStyle = $('input[name=15ptColor]').val();
+                    else if(board[i][j] === 5)
+                        context.fillStyle = $('input[name=5ptColor]').val();
                     context.fill();
                 } else if (board[i][j] === 4) {
                     context.beginPath();
-                    context.rect(center.x - 30, center.y - 30, 60, 60);
+                    context.rect(center.x - 30, center.y - 30, 5, 60);
                     context.fillStyle = "grey"; //color
                     context.fill();
                 }
@@ -283,15 +347,22 @@
             }
         }
         if (board[shape.i][shape.j] === 1) {
-            score++;
+            score+=25;
         }
+        if (board[shape.i][shape.j] === 3){
+            score+=15;
+        }
+        if (board[shape.i][shape.j] === 5){
+            score+=5;
+        }
+
         board[shape.i][shape.j] = 2;
         var currentTime = new Date();
         time_elapsed = (currentTime - start_time) / 1000;
         if (score >= 20 && time_elapsed <= 10) {
             pac_color = "green";
         }
-        if (score === 50) {
+        if (score === 200) {
             window.clearInterval(interval);
             window.alert("Game completed");
         } else {
@@ -299,8 +370,7 @@
         }
     }
 
-    /*our functions*/
-    
+
     function toggle(target){ 
         var menuElements= document.getElementsByClassName("content");
         var targ = document.getElementById(target);          
