--- a/index.htm
+++ b/index.htm
@@ -193,6 +193,7 @@
     var users = ['a'];
     var passwords =  ['a'];
     var monsters;
+    var monster_count;
     var backgroundAudio= new Audio("game_background_music.mp3");
     backgroundAudio.addEventListener('ended', function() {
         this.currentTime = 0;
@@ -212,7 +213,6 @@
         board = new Array();
         monsters = [];
         score = 0;
-        pac_color = "yellow";
         pacLife=3;
         pacDirection =1;
         var cnt = 200;
@@ -222,7 +222,7 @@
         var twentyFivePointFood= Math.ceil(0.1* food_remain);
         // 0=empty 1= 25-Food, 2=pacman, 3=15-Food, 4=wall, 5=5-Food, 6=life
         var pacman_remain = 1;
-        var monster_remain = $('select[name=numMonsters]').val();
+        monster_count = $('select[name=numMonsters]').val();
         initiateMonsters();
         start_time = new Date();
         for (var i = 0; i < 20; i++) {
@@ -235,11 +235,6 @@
                 else if ((i===16 && j===4)|| (i===6 && j===9)){
                     board[i][j] = 6;
                 }
-
-                // else if (monster_remain  > 0 && ((i===0 && j===0) || (i===0 && j===9)|| (i===9 && j===0)) ){
-                //         board[i][j] = 6;
-                //         monster_remain--;
-                // }
                 else {
                     var randomNum = Math.random();
                     if (randomNum <= 1.0 * food_remain / cnt) {
@@ -261,7 +256,7 @@
                                 foodColored=true;
                             }
                         }
-                    } else if (randomNum < 1.0 * (pacman_remain + food_remain) / cnt) {
+                    } else if (randomNum < 1.0 * (pacman_remain + food_remain) / cnt && notCorners(i,j)) {
                         shape.i = i;
                         shape.j = j;
                         pacman_remain--;
@@ -289,18 +284,32 @@
     }
 
     function initiateMonsters(){
-
         monsters.push(new monster(0,0,"Images/greenMonster.jpg"));
         monsters.push(new monster(0,9,"Images/yellowMonster.png"));
         monsters.push(new monster(19,0,"Images/redMonster.png"));
-
-        // var monster1 = new Image();
-        // monster1.src=("Images/greenMonster.jpg");
-        // var monster2 = new Image();
-        // monster2.src=("Images/yellowMonster.png");
-        // var monster3 = new Image();
-        // monster3.src="Images/redMonster.png";
     }
+
+    function restoreMonsetrsAndPacToBase(){
+        monsters[0].x=0;
+        monsters[0].y=0;
+        monsters[1].x=0;
+        monsters[1].y=9;
+        monsters[2].x=19;
+        monsters[2].y=0;
+        //prevent pacman to start from the corners
+        let [i,j]=findRandomEmptyCell();
+        while(!notCorners(i,j) )
+            [i,j]=findRandomEmptyCell();
+        shape.x=i;
+        shape.y=j;
+    }
+
+    function notCorners(corI,corJ){
+        if([i,j]=== [0,0] || [i,j] === [19,9] ||  [i,j] === [19,0] ||  [i,j] === [0,9])
+            return false;
+        return true;
+    }
+
     function findRandomEmptyCell(board) {
         var i = Math.floor((Math.random() * 9) + 1);
         var j = Math.floor((Math.random() * 9) + 1);
@@ -342,39 +351,24 @@
                 if (board[i][j] === 2) {
                     context.beginPath();
                     /* draw packman according to it's direction */
-                    context.arc(center.x, center.y, 20, ((1.65+0.5*pacDirection) % 2) * Math.PI, ((1.35+0.5*pacDirection)%2)* Math.PI);
+                    context.arc(center.x, center.y, 20, ((1.65 + 0.5 * pacDirection) % 2) * Math.PI, ((1.35 + 0.5 * pacDirection) % 2) * Math.PI);
                     context.lineTo(center.x, center.y);
                     context.fillStyle = pac_color; //color
                     context.fill();
                     context.beginPath();
                     /* change eye drawing based on pacman direction */
-                    if(pacDirection==0)
+                    if (pacDirection == 0)
                         context.arc(center.x + 15, center.y - 5, 3, 0, 2 * Math.PI); // circle
-                    else if(pacDirection==1)
+                    else if (pacDirection == 1)
                         context.arc(center.x + 5, center.y - 15, 3, 0, 2 * Math.PI); // circle
-                    else if (pacDirection==2)
+                    else if (pacDirection == 2)
                         context.arc(center.x - 15, center.y + 5, 3, 0, 2 * Math.PI); // circle
-                    else if (pacDirection==3)
+                    else if (pacDirection == 3)
                         context.arc(center.x - 5, center.y - 15, 3, 0, 2 * Math.PI); // circle
                     context.fillStyle = "black"; //color
                     context.fill();
-                    // drawPackman();
-                // } else if (board[i][j] === 6){
-                //     context.beginPath();
-                //     if(monsterCount===0){
-                //         monsterCount++;
-                //         context.drawImage(monster1,i*60,j*60,60,60);
-                //     }
-                //     else if(monsterCount===1){
-                //         monsterCount++;
-                //         context.drawImage(monster2,i*60,j*60,60,60);
-                //     }
-                //     else if (monsterCount===2){
-                //         monsterCount++;
-                //         context.drawImage(monster3,i*60,j*60,60,60);
-                //     }
-
                 }
+                //draw food
                 else if (board[i][j] === 1 || board[i][j] === 3 || board[i][j] ===5) {
                     context.beginPath();
                     context.arc(center.x, center.y, 7, 0, 2 * Math.PI); // circle
@@ -386,18 +380,25 @@
                     else if(board[i][j] === 5)
                         context.fillStyle = $('input[name=5ptColor]').val();
                     context.fill();
-                } else if (board[i][j] === 4) {
+
+                } //draw walls
+                else if (board[i][j] === 4) {
                     context.beginPath();
                     context.rect(center.x -30,center.y-30, 60, 60);
                     context.fillStyle = "lightskyblue"; //color
                     context.fill();
-                }
+                }//draw life
                 else if (board[i][j]===6){
                     var img= new Image();
                     img.src="Images/heart.PNG";
                     context.drawImage(img,i*60+24,j*60+30,20,20);
                 }
-            }
+                //draw monsters
+                context.beginPath();
+                for(var i =0; i < monsterCount; i++){
+                    context.drawImage(monsters[i].img,i*60,j*60,60,60);
+                }
+             }
         }
     }
 
@@ -443,12 +444,10 @@
             pacLife++;
         }
         board[shape.i][shape.j] = 2;
+
         var currentTime = new Date();
         time_elapsed = (currentTime - start_time) / 1000;
-        // if (score >= 20 && time_elapsed <= 10) {
-        //     pac_color = "green";
-        // }
-
+        moveMonsters();
         //handle end of game
         if (pacLife=== 0) {
             window.clearInterval(interval);
@@ -473,7 +472,69 @@
         else return false;
     }
 
+    function moveMonsters(){
+        var monster, minDistance=Number.NEGATIVE_INFINITY, mDist, minX, minY;
+        for(var i=0; i<monster_count; i++){
+            monster=monsters[i];
+            //right
+            if(isCorridanteValid(monster.x+1,y) ){
+                mDist = checkDistanceFromPac(monster.x+1,monster.y);
+                if (mDist < minDistance) {
+                    minDistance = mDist;
+                    minX=monster.x+1;
+                    minY=monster.y;
+                }
+            }//left
+            if(isCorridanteValid(monster.x-1,monster.y)){
+                mDist = checkDistanceFromPac(monster.x-1,monster.y);
+                if (mDist < minDistance) {
+                    minDistance = mDist;
+                    minX=monster.x-1;
+                    minY=monster.y;                }
+            }//down
+            if(isCorridanteValid(monster.x, monster.y+1) ){
+                mDist = checkDistanceFromPac(monster.x,monster.y+1);
+                if (mDist < minDistance) {
+                    minDistance = mDist;
+                    minX=monster.x;
+                    minY=monster.y+1;                }
+            }//up
+            if(isCorridanteValid(monster.x, monster.y-1) ){
+                mDist = checkDistanceFromPac(monster.x,monster.y-1);
+                if (mDist < minDistance) {
+                    minDistance = mDist;
+                    minX=monster.x;
+                    minY=monster.y-1;                }
+            }
+            if( (i===0) ||
+                (i==1 && (minX!==monsters[0].x || minY!==monsters[0].y)) ||
+                (i==2 && (minX!==monsters[0].x || minY!==monsters[0].y) && (minX!==monsters[1].x || minY!==monsters[1].y))){
+                    monster.x = minX;
+                    monster.y = minY;
+            }
 
+            //monster caught pacman
+            if (board[monster.x][monster.y]=== 2) {
+                pacLife--;
+                $('image-gallery-lifes li:last-child').remove();
+                if(pacLife>0){
+                    restoreMonsetrsAndPacToBase();
+                }
+            }
+        }
+    }
+
+    /*compute distance from pacman*/
+    function checkDistanceFromPac(x,y){
+        return Math.sqrt(Math.pow(x-shape.x,2)+Math.pow(y-shape.y,2));
+    }
+
+    /*checks whether [x,y] are out game boundaries and whether they contains a wall*/
+    function isCorridanteValid(x,y){
+        return (x<20 && j<10 && board[x][y]!==4)
+    }
+
+    /*switch between divs*/
     function toggle(target){ 
         var menuElements= document.getElementsByClassName("content");
         var targ = document.getElementById(target);          
