--- a/index.htm
+++ b/index.htm
@@ -42,13 +42,13 @@
             <div class=whitetop>
                 <h3> Register information</h3>
             </div>
-            <input class="name" type="text" name="username" placeholder="Username" required >
+            <input class="name" type="text" name="username" placeholder="Username" required>
             <br>
-            <input class="mail" type="email" name="email" placeholder="E-mail address" required >
+            <input class="mail" type="email" name="email" placeholder="E-mail address" required>
             <br>
-            <input class="name" type="text" name="firstName" placeholder="First Name" required >
+            <input class="name" type="text" name="firstName" placeholder="First Name" required>
             <br>
-            <input class="name" type="text" name="lastName" placeholder="Last Name" required >
+            <input class="name" type="text" name="lastName" placeholder="Last Name" required>
             <br>
             <input class="pass" type="password" name="password" placeholder="Password" required>
             <br>
@@ -56,7 +56,6 @@
             <br>
             <input class="submit" type="submit" name="submit"  onclick="validateRegister(); return false;" value="Register">
         </form>
-
     </div>
     <div class="content" id="Login" style="display:none;">
         <form method="post" class="loginform">
@@ -171,7 +170,7 @@
         <br/>
         <canvas id="canvas" height="600" width="1200"></canvas>
         <br/>
-        <input type="button" value="New Game!" onclick="if(confirm('Are you sure you want to start a new game?')) toggle('Settings')">
+        <input type="button" value="New Game!" onclick=startNewGame()>
     </div>
 
     <footer>
@@ -187,9 +186,8 @@
     var pac_color;
     var start_time;
     var time_elapsed;
-    var interval;
+    var interval, monsterInterval;
     var pacDirection;
-    var currentUser;
     var users = ['a'];
     var passwords =  ['a'];
     var monsters;
@@ -199,6 +197,16 @@
         this.currentTime = 0;
         this.play();
     }, false);
+
+    function startNewGame(){
+        if(confirm('Are you sure you want to start a new game?')){
+            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
+            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
+            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
+            toggle('Settings');
+        }
+
+    }
     //monster class
     class monster{
         constructor(x,y,url){
@@ -215,6 +223,7 @@
         score = 0;
         pacLife=3;
         pacDirection =1;
+        pac_color="Yellow";
         var cnt = 200;
         var food_remain = $('.range-slider input[type=range]').val();
         var fivePointFood= Math.floor(0.6* food_remain);
@@ -256,7 +265,7 @@
                                 foodColored=true;
                             }
                         }
-                    } else if (randomNum < 1.0 * (pacman_remain + food_remain) / cnt && notCorners(i,j)) {
+                    } else if ( (randomNum < (1.0 * (pacman_remain + food_remain) / cnt )) && notCorners(i,j)) {
                         shape.i = i;
                         shape.j = j;
                         pacman_remain--;
@@ -280,7 +289,8 @@
         addEventListener("keyup", function (e) {
             keysDown[e.code] = false;
         }, false);
-        interval = setInterval(UpdatePosition, 120);
+        interval = setInterval(UpdatePosition, 160);
+        monsterInterval =setInterval(moveMonsters,  400);
     }
 
     function initiateMonsters(){
@@ -289,7 +299,7 @@
         monsters.push(new monster(19,0,"Images/redMonster.png"));
     }
 
-    function restoreMonsetrsAndPacToBase(){
+    function restoreMonstersAndPacToBase(){
         monsters[0].x=0;
         monsters[0].y=0;
         monsters[1].x=0;
@@ -297,17 +307,18 @@
         monsters[2].x=19;
         monsters[2].y=0;
         //prevent pacman to start from the corners
-        let [i,j]=findRandomEmptyCell();
-        while(!notCorners(i,j) )
-            [i,j]=findRandomEmptyCell();
-        shape.x=i;
-        shape.y=j;
+        board[shape.i][shape.j]=0;
+        var emptyC = findRandomEmptyCell(board);
+        while(!notCorners(emptyC[0],emptyC[1]) )
+            emptyC = findRandomEmptyCell(board);
+        shape.i=emptyC[0];
+        shape.j=emptyC[1];
     }
 
     function notCorners(corI,corJ){
-        if([i,j]=== [0,0] || [i,j] === [19,9] ||  [i,j] === [19,0] ||  [i,j] === [0,9])
-            return false;
-        return true;
+
+        var ans= !((corI === 0 && corJ === 0) || (corI === 19 && corJ === 9) || (corI === 19 && corJ === 0) || (corI === 0 && corJ === 9));
+        return ans;
     }
 
     function findRandomEmptyCell(board) {
@@ -342,13 +353,14 @@
         context.clearRect(0, 0, canvas.width, canvas.height); //clean board
         lblScore.value = score;
         lblTime.value = time_elapsed;
-        var monsterCount=0;
+        boardLoop:
         for (var i = 0; i < 20; i++) {
             for (var j = 0; j < 10; j++) {
                 var center = new Object();
                 center.x = i * 60 + 30;
                 center.y = j * 60 + 30;
                 if (board[i][j] === 2) {
+
                     context.beginPath();
                     /* draw packman according to it's direction */
                     context.arc(center.x, center.y, 20, ((1.65 + 0.5 * pacDirection) % 2) * Math.PI, ((1.35 + 0.5 * pacDirection) % 2) * Math.PI);
@@ -375,7 +387,7 @@
                     if(board[i][j]===1) {
                         context.fillStyle = $('input[name=25ptColor]').val(); //color
                     }
-                    else if (board[i][j] === 3)
+                    else if(board[i][j] === 3)
                         context.fillStyle = $('input[name=15ptColor]').val();
                     else if(board[i][j] === 5)
                         context.fillStyle = $('input[name=5ptColor]').val();
@@ -394,17 +406,30 @@
                     context.drawImage(img,i*60+24,j*60+30,20,20);
                 }
                 //draw monsters
-                context.beginPath();
-                for(var i =0; i < monsterCount; i++){
-                    context.drawImage(monsters[i].img,i*60,j*60,60,60);
+                for(var m =0; m < monster_count; m++){
+                    if(monsters[m].x === i && monsters[m].y === j)
+                        context.drawImage(monsters[m].img,i*60,j*60,60,60);
                 }
              }
+        }
+        for(var m =0; m < monster_count; m++) {
+            if (board[monsters[m].x][monsters[m].y] === 2) {
+                pacLife--;
+                // if(pacLife>=0)
+                $('.image-gallery-lifes li:last-child').remove();
+                score = score - 10;
+                if (pacLife > 0) {
+                    restoreMonstersAndPacToBase();
+                    break;
+                } else if (checkEndGame()) {
+                    break;
+                }
+            }
         }
     }
 
     function UpdatePosition() {
         board[shape.i][shape.j] = 0;
-        var gameTime= $('input[name=gameTime]').val();
         var x = GetKeyPressed();
         if (x === 1) { //ArrowUp
             if (shape.j > 0 && board[shape.i][shape.j - 1] !== 4) {
@@ -440,98 +465,141 @@
             score+=5;
         }
         if (board[shape.i][shape.j] === 6){ //pacman got life
-            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.PNG" height="20px" width="20px"></li>');
+            $(".image-gallery-lifes").append('<li> <img src="Images/pacmanLife.png" height="20px" width="20px"></li>');
             pacLife++;
         }
-        board[shape.i][shape.j] = 2;
+        board[shape.i][shape.j] = 2
 
         var currentTime = new Date();
         time_elapsed = (currentTime - start_time) / 1000;
-        moveMonsters();
+        //moveMonsters();
         //handle end of game
-        if (pacLife=== 0) {
-            window.clearInterval(interval);
-            backgroundAudio.pause();
-            alert("You Lost!");
-        } else if(time_elapsed>= gameTime) {
-            window.clearInterval(interval);
-            backgroundAudio.pause();
-            if( score < 150)
-                alert("You can do better than "+score+" points");
-            else
-                alert("We have a Winner!!!")
-        } else {
+        if (!checkEndGame() && !checkEndTime()){
             Draw();
         }
     }
-    function checkWalls(i,j){
-        if ((i === 3 && j === 3) || (i === 3 && j === 4) || (i === 3 && j === 5) || (i === 6 && j === 1) || (i === 6 && j === 2)
-            || (i === 6 && j === 4)|| (i === 6 && j === 5)) {
+
+    function checkEndGame(){
+        if (pacLife === 0) {
+            window.clearInterval(interval);
+            window.clearInterval(monsterInterval);
+            backgroundAudio.pause();
+            alert("You Lost!");
             return true;
         }
-        else return false;
+        return false;
+
+    }
+    function checkEndTime(){
+        var gameTime= $('input[name=gameTime]').val();
+        if(time_elapsed>= gameTime) {
+            window.clearInterval(interval);
+            window.clearInterval(monsterInterval);
+            backgroundAudio.pause();
+            if (score < 150)
+                alert("You can do better than " + score + " points");
+            else
+                alert("We have a Winner!!!")
+            return true;
+        }
+        return false;
+
     }
 
-    function moveMonsters(){
-        var monster, minDistance=Number.NEGATIVE_INFINITY, mDist, minX, minY;
-        for(var i=0; i<monster_count; i++){
-            monster=monsters[i];
-            //right
-            if(isCorridanteValid(monster.x+1,y) ){
-                mDist = checkDistanceFromPac(monster.x+1,monster.y);
-                if (mDist < minDistance) {
-                    minDistance = mDist;
-                    minX=monster.x+1;
-                    minY=monster.y;
-                }
-            }//left
-            if(isCorridanteValid(monster.x-1,monster.y)){
-                mDist = checkDistanceFromPac(monster.x-1,monster.y);
-                if (mDist < minDistance) {
-                    minDistance = mDist;
-                    minX=monster.x-1;
-                    minY=monster.y;                }
-            }//down
-            if(isCorridanteValid(monster.x, monster.y+1) ){
-                mDist = checkDistanceFromPac(monster.x,monster.y+1);
-                if (mDist < minDistance) {
-                    minDistance = mDist;
-                    minX=monster.x;
-                    minY=monster.y+1;                }
-            }//up
-            if(isCorridanteValid(monster.x, monster.y-1) ){
-                mDist = checkDistanceFromPac(monster.x,monster.y-1);
-                if (mDist < minDistance) {
-                    minDistance = mDist;
-                    minX=monster.x;
-                    minY=monster.y-1;                }
-            }
-            if( (i===0) ||
-                (i==1 && (minX!==monsters[0].x || minY!==monsters[0].y)) ||
-                (i==2 && (minX!==monsters[0].x || minY!==monsters[0].y) && (minX!==monsters[1].x || minY!==monsters[1].y))){
-                    monster.x = minX;
-                    monster.y = minY;
-            }
+    function checkWalls(i,j){
+        return (i === 3 && j === 3) || (i === 3 && j === 4) || (i === 3 && j === 5) || (i === 6 && j === 1) || (i === 6 && j === 2)
+            || (i === 6 && j === 4) || (i === 6 && j === 5);
+    }
 
-            //monster caught pacman
-            if (board[monster.x][monster.y]=== 2) {
-                pacLife--;
-                $('image-gallery-lifes li:last-child').remove();
-                if(pacLife>0){
-                    restoreMonsetrsAndPacToBase();
+    function moveMonsters() {
+        var monster, minDistance = Number.POSITIVE_INFINITY, mDist, minX, minY;
+        var randMovement;
+        for (var i = 0; i < monster_count; i++) {
+            randMovement = Math.random();
+            monster = monsters[i];
+            //right
+            // if (randMovement > 0.15) {
+                if (isCorridanteValid(monster.x + 1, monster.y)) {
+                    mDist = checkDistanceFromPac(monster.x + 1, monster.y);
+                    if (mDist < minDistance) {
+                        minDistance = mDist;
+                        minX = monster.x + 1;
+                        minY = monster.y;
+                    }
+                }//left
+                if (isCorridanteValid(monster.x - 1, monster.y)) {
+                    mDist = checkDistanceFromPac(monster.x - 1, monster.y);
+                    if (mDist < minDistance) {
+                        minDistance = mDist;
+                        minX = monster.x - 1;
+                        minY = monster.y;
+                    }
+                }//down
+                if (isCorridanteValid(monster.x, monster.y + 1)) {
+                    mDist = checkDistanceFromPac(monster.x, monster.y + 1);
+                    if (mDist < minDistance) {
+                        minDistance = mDist;
+                        minX = monster.x;
+                        minY = monster.y + 1;
+                    }
+                }//up
+                if (isCorridanteValid(monster.x, monster.y - 1)) {
+                    mDist = checkDistanceFromPac(monster.x, monster.y - 1);
+                    if (mDist < minDistance) {
+                        minDistance = mDist;
+                        minX = monster.x;
+                        minY = monster.y - 1;
+                    }
                 }
+            // }
+            //TODO: complete movement randomization
+            // else {
+            //     var optionalMoves = getPossibleMoves(monster.x, monster.y);
+            //     var moveIndex = Math.floor(Math.random() * Math.floor(optionalMoves.length));
+            //     var x= optionalMoves[moveIndex],y=optionalMoves[moveIndex];
+            //     minX=x;
+            //     minY=y;
+            //}
+            if ((i === 0) ||
+                (i === 1 && (minX !== monsters[0].x || minY !== monsters[0].y)) ||
+                (i === 2 && (minX !== monsters[0].x || minY !== monsters[0].y) && (minX !== monsters[1].x || minY !== monsters[1].y))) {
+                monster.x = minX;
+                monster.y = minY;
             }
+            //    monster caught pacman
+
+            minDistance = Number.POSITIVE_INFINITY;
         }
+    }
+
+    function getPossibleMoves(x,y){
+        var possibleMoves = [];
+        if (isCorridanteValid(x,y - 1)){
+            possibleMoves.push([x,y-1]);
+        }
+        if (isCorridanteValid(x,y + 1)){
+            possibleMoves.push([x,y+1]);
+        }
+
+        if (isCorridanteValid(x+1,y)){
+            possibleMoves.push([x+1,y]);
+        }
+
+        if (isCorridanteValid(x-1,y)){
+            possibleMoves.push([x-1,y]);
+        }
+        return possibleMoves;
     }
 
     /*compute distance from pacman*/
     function checkDistanceFromPac(x,y){
-        return Math.sqrt(Math.pow(x-shape.x,2)+Math.pow(y-shape.y,2));
+        var ans= Math.sqrt(Math.pow(x-shape.i,2)+Math.pow(y-shape.j,2));
+        return ans;
     }
 
     /*checks whether [x,y] are out game boundaries and whether they contains a wall*/
     function isCorridanteValid(x,y){
-        return (x<20 && j<10 && board[x][y]!==4)
+        return (x<20 && x>=0 && y<10 && y>=0 && board[x][y]!==4);
     }
 
     /*switch between divs*/
